weiguan: 1. init import

--- a/codegen-gradle-plugin/build.gradle
+++ b/codegen-gradle-plugin/build.gradle
@@ -41,7 +41,7 @@ gradlePlugin {
         }
         "service-integration" {
             id = 'io.ttyys.gradle.codegen.integration-gradle-plugin'
-            implementationClass = 'io.ttyys.micrc.codegen.gradle.plugin.integration.CodeGeneratorPlugin'
+            implementationClass = 'io.ttyys.micrc.codegen.gradle.plugin.integration.ServiceIntegrationPlugin'
         }
     }
 }
