--- a/codegen-gradle-plugin/build.gradle
+++ b/codegen-gradle-plugin/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'java-gradle-plugin'
+    id "maven"
 }
 
 group 'io.ttyys.micrc'
@@ -15,6 +16,7 @@ ext {
     set('groovyVersion', '2.4.15')
     set('avroVersion', '1.10.2')
     set('slf4jVersion', '1.7.30')
+    set('fastjsonVersion', '1.2.76')
 }
 
 repositories {
@@ -27,10 +29,20 @@ jar.enabled = true
 dependencies {
     compileOnly files(Jvm.current().toolsJar)
 
+    implementation "com.alibaba:fastjson:${fastjsonVersion}"
     implementation "org.apache.avro:avro-compiler:${avroVersion}"
 
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
+}
+
+uploadArchives {
+    repositories {
+        /**配置Maven部署器，将工件上传到本地目录，这里是放到与该项目同级目录的repo目录下*/
+        mavenDeployer {
+            repository(url: "file://" + new File("../../repo").getAbsolutePath())
+        }
+    }
 }
 
 gradlePlugin {
