--- a/micrc-annotations/build.gradle
+++ b/micrc-annotations/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
+    id 'maven'
 }
 
 group 'io.ttyys.micrc'
@@ -19,4 +20,13 @@ repositories {
 jar.enabled = true
 
 dependencies {
+}
+
+uploadArchives {
+    repositories {
+        /**配置Maven部署器，将工件上传到本地目录，这里是放到与该项目同级目录的repo目录下*/
+        mavenDeployer {
+            repository(url: "file://" + new File("../../repo").getAbsolutePath())
+        }
+    }
 }
