--- a/ModuleConfig/build.gradle
+++ b/ModuleConfig/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     repositories {
         /**指定本地maven仓库*/
-        maven { url "file://" + new File("../repo").absolutePath }
+        maven { url "file://" + new File("../../repo").absolutePath }
         mavenLocal()
         mavenCentral()
     }
+
 
     dependencies {
         /**构建脚本并不知道外部插件的存在，除非将插件添加到 classpath*/
