--- a/micrc-annotations/build.gradle
+++ b/micrc-annotations/build.gradle
@@ -1,36 +1,13 @@
-buildscript {
-    ext['groovy.version'] = '3.0.7'
-    ext {
-        ttttMessageVersion = '1.0.1.RELEASE'
-        groovyVersion = '3.0.7'
-        springBootVersion = '2.1.3.RELEASE'
-        springLoadedVersion = '1.2.6.RELEASE'
-    }
-    repositories {
-        mavenLocal()
-//        maven { url "http://nexus.wulinru.com:18081/repository/maven-public/" }
-        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-        maven { url "http://maven.jeecg.com:8090/nexus/content/repositories/jeecg" }
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.springframework:springloaded:${springLoadedVersion}")
-    }
-}
 plugins {
     id 'java'
     id 'idea'
-    id 'maven'
+    id 'maven-publish'
 }
 
 group 'io.ttyys.micrc'
 version '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
-
-ext {
-}
 
 repositories {
     mavenLocal()
@@ -39,15 +16,28 @@ repositories {
 
 jar.enabled = true
 
-dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
-}
+publishing {
+    publications {
+        //noinspection GroovyAssignabilityCheck
+        maven(MavenPublication) {
+            //noinspection GroovyAssignabilityCheck
+            from components.java
+        }
+    }
 
-uploadArchives {
     repositories {
-        /**配置Maven部署器，将工件上传到本地目录，这里是放到与该项目同级目录的repo目录下*/
-        mavenDeployer {
-            repository(url: "file://" + new File("../../repo").getAbsolutePath())
+        mavenCentral {
         }
     }
 }
+
+// 使用publishing中的publishToMavenLocal任务
+// https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven
+//uploadArchives {
+//    repositories {
+//        /**配置Maven部署器，将工件上传到本地目录，这里是放到与该项目同级目录的repo目录下*/
+//        mavenDeployer {
+//            repository(url: "file://" + new File("../../repo").getAbsolutePath())
+//        }
+//    }
+//}
