weiguan: 1. complete integration message basic configuration test 2. ready to transaction, duplicate and priority test 3. prepare to cluster test

--- a/micrc-core/build.gradle
+++ b/micrc-core/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "org.apache.camel.springboot:camel-avro-rpc-starter"
     implementation "org.apache.camel.springboot:camel-jms-starter"
     implementation "org.apache.camel.springboot:camel-jpa-starter"
+    implementation "org.apache.camel.springboot:camel-spring-integration-starter"
     testImplementation "org.apache.camel:camel-test-spring-junit5"
 
 
