--- a/micrc-core/settings.gradle
+++ b/micrc-core/settings.gradle
@@ -1,7 +1,7 @@
 pluginManagement {
     plugins {
         id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-        id 'org.springframework.boot' version '2.3.10.RELEASE'
+        id 'org.springframework.boot' version '2.4.5'
     }
 }
 
