--- a/micrc-core/build.gradle
+++ b/micrc-core/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
     // unit and integration test
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-//    testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
+    testImplementation "org.junit.vintage:junit-vintage-engine:5.7.0"
 
     // database migration
 //    implementation "org.liquibase:liquibase-core"
