--- a/micrc-core/build.gradle
+++ b/micrc-core/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'idea'
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
+    id 'maven-publish'
 }
 
 group 'io.ttyys.micrc'
@@ -83,4 +84,16 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+// 使用publishing中的publishToMavenLocal任务
+// https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven
+publishing {
+    publications {
+        //noinspection GroovyAssignabilityCheck
+        maven(MavenPublication) {
+            //noinspection GroovyAssignabilityCheck
+            from components.java
+        }
+    }
 }
