--- a/sad-gradle-plugin/build.gradle
+++ b/sad-gradle-plugin/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'java-gradle-plugin'
-    id "maven"
+    id 'maven-publish'
 }
 
 group 'io.ttyys.micrc'
@@ -32,15 +32,6 @@ dependencies {
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
 }
 
-uploadArchives {
-    repositories {
-        /**配置Maven部署器，将工件上传到本地目录，这里是放到与该项目同级目录的repo目录下*/
-        mavenDeployer {
-            repository(url: "file://" + new File("../../repo").getAbsolutePath())
-        }
-    }
-}
-
 gradlePlugin {
     plugins {
         "schema-design" {
@@ -53,4 +44,14 @@ gradlePlugin {
         }
     }
 }
-
+// 使用publishing中的publishToMavenLocal任务
+// https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven
+publishing {
+    publications {
+        //noinspection GroovyAssignabilityCheck
+        maven(MavenPublication) {
+            //noinspection GroovyAssignabilityCheck
+            from components.java
+        }
+    }
+}
