--- a/micrc-core/build.gradle
+++ b/micrc-core/build.gradle
@@ -7,20 +7,33 @@ plugins {
 }
 
 group 'io.ttyys.micrc'
-version '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+version '0.0.2-SNAPSHOT'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 ext {
     set('camel.version', '3.7.4')
     set('artemis.version', '2.17.0')
     set('lombok.version', '1.18.20')
     set('mapstruct.version', '1.4.2.Final')
+
+    // 稳定版仓库地址
+    set('releasesRepositoryUrl', "http://192.168.31.138:8081/repository/maven-releases/")
+    // 测试版仓库地址
+    set('snapshotsRepositoryUrl', "http://192.168.31.138:8081/repository/maven-snapshots/")
+    // nexus用户名
+    set('nexusUser', "admin")
+    // nexus密码
+    set('nexusPasswd', "105115Fc")
 }
 
 repositories {
     mavenLocal()
     mavenCentral()
+    maven {
+        name = "publicRepo"
+        url = uri("http://192.168.31.138:8081/repository/maven-public/")
+    }
 }
 
 bootJar.enabled = false
@@ -35,7 +48,7 @@ dependencyManagement {
 
 dependencies {
     // annotation
-    implementation "io.ttyys.micrc:micrc-annotations:0.0.1-SNAPSHOT"
+    implementation "io.ttyys.micrc:micrc-annotations:0.0.2-SNAPSHOT"
 
     // persistence
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
@@ -89,6 +102,21 @@ test {
 // 使用publishing中的publishToMavenLocal任务
 // https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven
 publishing {
+    repositories {
+        maven {
+            if (project.version.toString().endsWith("-SNAPSHOT")) {
+                name = "snapshotsRepo"
+                url = uri("${property('snapshotsRepositoryUrl')}")
+            } else {
+                name = "releasesRepo"
+                url = uri("${property('releasesRepositoryUrl')}")
+            }
+            credentials {
+                username = "${property('nexusUser')}"
+                password = "${property('nexusPasswd')}"
+            }
+        }
+    }
     publications {
         //noinspection GroovyAssignabilityCheck
         maven(MavenPublication) {
