--- a/message-verification-demo/settings.gradle
+++ b/message-verification-demo/settings.gradle
@@ -1,7 +1,7 @@
 pluginManagement {
     plugins {
-        id 'org.springframework.boot' version '2.3.8.RELEASE'
         id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+        id 'org.springframework.boot' version '2.4.5'
         id 'com.palantir.docker' version '0.25.0'
     }
 }
