1. 调通本地消息支撑库 2. 优化本地消息/api支撑库以及注解代码

--- a/micrc-annotations/build.gradle
+++ b/micrc-annotations/build.gradle
@@ -27,6 +27,15 @@ ext {
     set('nexusPasswd', "105115Fc")
 }
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+task javadocJar(type: Jar) {
+    from javadoc
+    classifier = 'javadoc'
+}
+
 // 使用publishing中的publishToMavenLocal任务
 // https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven
 publishing {
@@ -50,6 +59,7 @@ publishing {
         maven(MavenPublication) {
             //noinspection GroovyAssignabilityCheck
             from components.java
+            artifact sourcesJar
         }
     }
 }
