--- a/codegen-gradle-plugin/build.gradle
+++ b/codegen-gradle-plugin/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "commons-io:commons-io:${commonsIoVersion}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
+    implementation 'org.springframework:spring-context:5.2.10.RELEASE'
 
     implementation "io.ttyys.micrc:micrc-annotations:${micrcAnnotationVersion}"
 
